--- a/src/App.css
+++ b/src/App.css
@@ -8,11 +8,32 @@
 
 .summary {
     padding-top: 15px;
-    justify-content: flex-end;
+    /* justify-content: flex-end; */
     flex-wrap: wrap;
     align-items: flex-start;
 }
 
-.col-2.5{
-    margin-right: 5px;
+.form-label {
+    margin-right: 10px;
+    margin-bottom: 0rem;
+}
+
+.form-group col-md-6 {
+    justify-content: center;
+}
+
+
+.height {
+    display: flex;
+    flex-direction: column;
+    width: 45px;
+    margin-left: 5px;
+}
+
+.form-input {
+    margin-left: -30px;
+}
+.feet-inch{
+    display: flex;
+    justify-content: space-around;
 }
