--- a/src/staticComponents/Login.css
+++ b/src/staticComponents/Login.css
@@ -14,7 +14,7 @@
     background: #191919;
     ;
     text-align: center;
-    transition: 0.25s;
+    /* transition: 0.25s; */
     margin-top: 100px
 }
 
@@ -31,7 +31,7 @@
     outline: none;
     color: white;
     border-radius: 24px;
-    transition: 0.25s
+    /* transition: 0.25s */
 }
 
 .box h1 {
@@ -57,7 +57,7 @@
     outline: none;
     color: white;
     border-radius: 24px;
-    transition: 0.25s;
+    /* transition: 0.25s; */
     cursor: pointer
 }
 
@@ -67,68 +67,4 @@
 
 .forgot {
     text-decoration: underline
-}
-
-ul.social-network {
-    list-style: none;
-    display: inline;
-    margin-left: 0 !important;
-    padding: 0
-}
-
-ul.social-network li {
-    display: inline;
-    margin: 0 5px
-}
-
-.social-network a.icoFacebook:hover {
-    background-color: #3B5998
-}
-
-.social-network a.icoTwitter:hover {
-    background-color: #33ccff
-}
-
-.social-network a.icoGoogle:hover {
-    background-color: #BD3518
-}
-
-.social-network a.icoFacebook:hover i,
-.social-network a.icoTwitter:hover i,
-.social-network a.icoGoogle:hover i {
-    color: #fff
-}
-
-a.socialIcon:hover,
-.socialHoverClass {
-    color: #44BCDD
-}
-
-.social-circle li a {
-    display: inline-block;
-    position: relative;
-    margin: 0 auto 0 auto;
-    border-radius: 50%;
-    text-align: center;
-    width: 50px;
-    height: 50px;
-    font-size: 20px
-}
-
-.social-circle li i {
-    margin: 0;
-    line-height: 50px;
-    text-align: center
-}
-
-.social-circle li a:hover i,
-.triggeredHover {
-    transform: rotate(360deg);
-    transition: all 0.2s
-}
-
-.social-circle i {
-    color: #fff;
-    transition: all 0.8s;
-    transition: all 0.8s
 }
