--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,6 @@
 }
 
 .summary {
-    padding-top: 15px;
-    /* justify-content: flex-end; */
     flex-wrap: wrap;
     align-items: flex-start;
 }
@@ -22,7 +20,6 @@
     justify-content: center;
 }
 
-
 .height {
     display: flex;
     flex-direction: column;
@@ -33,7 +30,13 @@
 .form-input {
     margin-left: -30px;
 }
+
 .feet-inch{
     display: flex;
     justify-content: space-around;
 }
+
+#conversion {
+   margin-left: -165px;
+}
+
